[package]
name = "tilemap"
description = "Module for Textyle, a web tilemap editor."
version = "0.1.0"
authors = ["Stefan Devai <stedevai@gmail.com>"]
edition = "2018"
repository = "https://github.com/stefandevai/textyle"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
xmlwriter = "0.1.0"

[dependencies.web-sys]
version = "0.3.45"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

